fix automation newpage
